terraform/k3s/k8s/base/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthpulse-ingress
  namespace: healthpulse
  labels:
    app.kubernetes.io/name: healthpulse-ingress
    app.kubernetes.io/part-of: healthpulse-platform
    app.kubernetes.io/component: ingress
    environment: dev
spec:
  ingressClassName: traefik
  rules:
    - host: healthpulse.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: healthpulse-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthpulse-web
                port:
                  number: 80
